Added Calendly for scheduling appointments, and minor changes to content.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="row">
                 <div class="col-lg-6 frontPageText">
                     <h1>Live Freely Enterprise</h1>
-                    <h4>turn potential customers into customers</h4>
+                    <h4>TURN POTENTIAL LEADS INTO CUSTOMERS</h4>
                 </div>
                 <div class="col-lg-6">
                     <img src="images/liveFreelyEnterprise-largeSticker.png" alt="Live Freely Enterprise Logo">
@@ -61,7 +61,7 @@
             <div class="row question">
                 <div class="col-lg-6">
                     <h3>Why Is Your Online Presence important?</h3>
-                    <p>The world is shifting to a digital economy, is your company poised to take advantage of it? The online marketplace has surged about 50 percent in the past 10 years, and a solid majority of your customers find nearly every service and item they buy on the digital marketplace.</p>
+                    <p>The world is shifting to a digital economy, is your company poised to take advantage of it? The online marketplace has surged about 50% in the past 10 years, and a solid majority of your customers find nearly every service and item they buy on the digital marketplace.</p>
                 </div>
                 <div class="col-lg-6 question-icon">
                     <i class="fa-solid fa-computer fa-6x"></i>
@@ -73,32 +73,27 @@
                 </div>
                 <div class="col-lg-6">
                     <h3>Are you maximizing profits?</h3>
-                    <p>Companies that aren't using the internet to cultivate leads and connect with their consumers are missing out the chance to grow their business exponentially, particularly if your consumer is in the Millenial or Generation Z age range that has grown up with digital technology. We want to help you reach that client by designing advertising that engages them and prompts them to act.</p>
+                    <p>Companies that aren't using the internet to cultivate leads and connect with their consumers are missing out the chance to grow their business exponentially, particularly if your consumer is in the Millenial or Generation-Z age range that has grown up with digital technology. We want to help you reach that client by designing advertising that engages them and prompts them to act.</p>
                 </div>
             </div>
             <div class="row question">
                 <div class="col-lg-6">
                     <h3>Why chose LFE?</h3>
-                    <p> If your company is looking to expand its online presence, we want to help you do it the right way. Our contractors are experienced and innovative in the digital realm and we work alongside to expand your business.  At LFE we pride ourselves on building long term relationships with our clients and believe our reputation is so important because we pride ourselves on just working with clients but retaining them, so we aim to make customers' experience as ideal as possible. We pride ourselves on being built by excellent results and excellent customer service.</p>
+                    <p> If your company is looking to expand its online presence, we want to help you do it the right way. Our contractors are experienced and innovative in the digital realm and we work alongside to expand your business. At LFE we pride ourselves on building long term relationships with our clients and believe our reputation is so important because we pride ourselves on just working with clients but retaining them, so we aim to make customers' experience as ideal as possible. We pride ourselves on being built by excellent results and excellent customer service.</p>
                 </div>
                 <div class="col-lg-6 question-icon">
                     <i class="icon fa-solid fa-circle-check fa-6x"></i>
-                </div>
-            </div>
-            <div class="row question">
-                <div class="col-lg-6">
-                    
-                </div>
-                <div class="col-lg-6">
-                    <h3>How much is our service?</h3>
-                    <p>To join hands with Live Freely Enterprise it's a recurring purchase of $2000 per month.</p>
                 </div>
             </div>
         </div>
     </section>
 
     <section id="appointment">
-        <h2>Schedule an Appointment Today</h2>
+        <h2>Book Now!</h2>
+        <!-- Calendly inline widget begin -->
+        <div class="calendly-inline-widget" data-url="https://calendly.com/jacobpudwill/introductory-call" style="min-width:320px;height:700px;"></div>
+        <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+        <!-- Calendly inline widget end -->
     </section>
 
     <footer id="footer">
