Edited services content.

--- a/index.html
+++ b/index.html
@@ -58,31 +58,67 @@
     <!-- Service -->
     <section id="service">
         <div class="container">
-            <div class="row question">
-                <div class="col-lg-6">
-                    <h3>Why Is Your Online Presence important?</h3>
-                    <p>The world is shifting to a digital economy, is your company poised to take advantage of it? The online marketplace has surged about 50% in the past 10 years, and a solid majority of your customers find nearly every service and item they buy on the digital marketplace.</p>
+            <div class="row question-row">
+                <div class="col-lg-6" id="question-one">
+                    <!-- <h3>Why Is Your Online Presence important?</h3>
+                    <p>The world is shifting to a digital economy, is your company poised to take advantage of it? The online marketplace has surged about 50% in the past 10 years, and a solid majority of your customers find nearly every service and item they buy on the digital marketplace.</p> -->
+                    <p>
+                        At Live Freely Enterprise, our expertise lies in <strong>boosting customer lead campaigns</strong>.
+                        We specialize in creating effective and result-driven strategies to attract more customers to your business.
+                        From crafting compelling landing pages that convert visitors into leads, to implementing precise retargeting 
+                        techniques to re-engage potential customers, we cover all aspects of lead generation. Additionally,
+                        our services extend to proficient email marketing campaigns that drive customer engagement and foster lasting
+                        relationships. Whether it's designing captivating emails or devising a comprehensive email marketing strategy,
+                        we have you covered. Count on us to provide the necessary guidance and support to enhance your marketing efforts
+                        and achieve your business goals.
+                    </p>
                 </div>
                 <div class="col-lg-6 question-icon">
                     <i class="fa-solid fa-computer fa-6x"></i>
                 </div>
             </div>
-            <div class="row question">
+            <div class="row question-row">
                 <div class="col-lg-6 question-icon">
                     <i class="fa-solid fa-chart-line fa-6x"></i>
                 </div>
-                <div class="col-lg-6">
-                    <h3>Are you maximizing profits?</h3>
-                    <p>Companies that aren't using the internet to cultivate leads and connect with their consumers are missing out the chance to grow their business exponentially, particularly if your consumer is in the Millenial or Generation-Z age range that has grown up with digital technology. We want to help you reach that client by designing advertising that engages them and prompts them to act.</p>
+                <div class="col-lg-6" id="question-two">
+                    <!-- <h3>Are you maximizing profits?</h3>
+                    <p>Companies that aren't using the internet to cultivate leads and connect with their consumers are missing out the chance to grow their business exponentially, particularly if your consumer is in the Millenial or Generation-Z age range that has grown up with digital technology. We want to help you reach that client by designing advertising that engages them and prompts them to act.</p> -->
+                    <p>
+                        Live Freely Enterprise specializes in <strong>website and app development services</strong>. Whether you need a new 
+                        website built from scratch, want to revamp your existing site, or require a cutting-edge mobile application, we have the 
+                        expertise to bring your vision to life. Our team of skilled professionals is dedicated to delivering high-quality and 
+                        innovative solutions that cater to your specific needs and objectives. Trust us to create a seamless online presence and 
+                        user-friendly experiences for your audience
+                    </p>
                 </div>
             </div>
-            <div class="row question">
-                <div class="col-lg-6">
-                    <h3>Why chose LFE?</h3>
-                    <p> If your company is looking to expand its online presence, we want to help you do it the right way. Our contractors are experienced and innovative in the digital realm and we work alongside to expand your business. At LFE we pride ourselves on building long term relationships with our clients and believe our reputation is so important because we pride ourselves on just working with clients but retaining them, so we aim to make customers' experience as ideal as possible. We pride ourselves on being built by excellent results and excellent customer service.</p>
+            <div class="row question-row">
+                <div class="col-lg-6" id="question-three">
+                    <!-- <h3>Why chose LFE?</h3>
+                    <p> If your company is looking to expand its online presence, we want to help you do it the right way. Our contractors are experienced and innovative in the digital realm and we work alongside to expand your business. At LFE we pride ourselves on building long term relationships with our clients and believe our reputation is so important because we pride ourselves on just working with clients but retaining them, so we aim to make customers' experience as ideal as possible. We pride ourselves on being built by excellent results and excellent customer service.</p> -->
+                    <p>
+                        Live Freely Enterprise excels in <strong>Social Media Engagement services</strong>, aimed at bolstering your online 
+                        presence and reaching a wider audience. Our strategies include crafting engaging and eye-catching post reels that 
+                        captivate your followers and potential customers. Moreover, we work tirelessly to enhance the overall quality of your 
+                        content, ensuring it resonates with your target audience and leaves a lasting impression. By leveraging our expertise, 
+                        you can expect significant improvements in your social media visibility and brand recognition.
+                    </p>
                 </div>
                 <div class="col-lg-6 question-icon">
                     <i class="icon fa-solid fa-circle-check fa-6x"></i>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12" id="question-four">
+                    <h3>Why Live Freely Enterprise?</h3>
+                    <p>
+                        When teaming up with Live Freely enterprise  you can be assured of having digital marketing and data science experts 
+                        by your side. Our primary focus revolves around crafting customer acquisition strategies with the utmost precision, 
+                        ensuring the highest possible return on investment for your marketing expenditures. Through seamless integration at an 
+                        operational level, we delve into understanding your business drivers and how digital marketing plays a pivotal role in 
+                        propelling your revenue growth
+                    </p>
                 </div>
             </div>
         </div>
