Updated services section.

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                 <div class="col-lg-6" id="question-one">
                     <!-- <h3>Why Is Your Online Presence important?</h3>
                     <p>The world is shifting to a digital economy, is your company poised to take advantage of it? The online marketplace has surged about 50% in the past 10 years, and a solid majority of your customers find nearly every service and item they buy on the digital marketplace.</p> -->
+                    <h2>Expand Customer Base</h2>
                     <p>
                         At Live Freely Enterprise, our expertise lies in <strong>boosting customer lead campaigns</strong>.
                         We specialize in creating effective and result-driven strategies to attract more customers to your business.
@@ -84,6 +85,7 @@
                 <div class="col-lg-6" id="question-two">
                     <!-- <h3>Are you maximizing profits?</h3>
                     <p>Companies that aren't using the internet to cultivate leads and connect with their consumers are missing out the chance to grow their business exponentially, particularly if your consumer is in the Millenial or Generation-Z age range that has grown up with digital technology. We want to help you reach that client by designing advertising that engages them and prompts them to act.</p> -->
+                    <h2>Online Plaform Creation</h2>
                     <p>
                         Live Freely Enterprise specializes in <strong>website and app development services</strong>. Whether you need a new 
                         website built from scratch, want to revamp your existing site, or require a cutting-edge mobile application, we have the 
@@ -97,6 +99,7 @@
                 <div class="col-lg-6" id="question-three">
                     <!-- <h3>Why chose LFE?</h3>
                     <p> If your company is looking to expand its online presence, we want to help you do it the right way. Our contractors are experienced and innovative in the digital realm and we work alongside to expand your business. At LFE we pride ourselves on building long term relationships with our clients and believe our reputation is so important because we pride ourselves on just working with clients but retaining them, so we aim to make customers' experience as ideal as possible. We pride ourselves on being built by excellent results and excellent customer service.</p> -->
+                    <h2>Social Media Engagement</h2>
                     <p>
                         Live Freely Enterprise excels in <strong>Social Media Engagement services</strong>, aimed at bolstering your online 
                         presence and reaching a wider audience. Our strategies include crafting engaging and eye-catching post reels that 
