Changed logo and edited background color.

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#appointment">Appointments</a>
                         </li>
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a class="nav-link" href="">About</a>
-                        </li>
+                        </li> -->
                         <li class="nav-item">
                             <a class="nav-link" href="#footer">Contact</a>
                         </li>
@@ -45,10 +45,10 @@
             <div class="row">
                 <div class="col-lg-6 frontPageText">
                     <h1>Live Freely Enterprise</h1>
-                    <h4>TURN POTENTIAL LEADS INTO CUSTOMERS</h4>
+                    <h4>Strategic Marketing Agency</h4>
                 </div>
                 <div class="col-lg-6">
-                    <img src="images/liveFreelyEnterprise-largeSticker.png" alt="Live Freely Enterprise Logo">
+                    <img src="images/LFE-Logo.png" id="LFE-Logo" alt="Live Freely Enterprise Logo">
                 </div>
             </div>
 
