--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <div class="col-lg-12" id="question-four">
                     <h2>Why Live Freely Enterprise?</h2>
                     <p>
-                        When teaming up with Live Freely enterprise  you can be assured of having digital marketing and data science experts 
+                        When teaming up with <strong>Live Freely Enterprise</strong> you can be assured of having digital marketing and data science experts 
                         by your side. Our primary focus revolves around crafting customer acquisition strategies with the utmost precision, 
                         ensuring the highest possible return on investment for your marketing expenditures. Through seamless integration at an 
                         operational level, we delve into understanding your business drivers and how digital marketing plays a pivotal role in 
