Added phone number to footer.

--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
         <a href="https://www.facebook.com/profile.php?id=100085589276702"><i class="social-icon fa-brands fa-facebook-f"></i></a>
         <a href="https://www.linkedin.com/in/glenn-elie-83741218a/"><i class="social-icon fa-brands fa-linkedin"></i></a>
         <a href="https://www.instagram.com/livefreelyenterprise/"><i class="social-icon fa-brands fa-instagram"></i></a>
+        <a href="Tel: 832-459-8036"><i class="social-icon fa-solid fa-phone"></i></a>
     </footer>
 
     <!-- Bootstrap JavaScript -->
