Re-arrange text.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <h4>Strategic Marketing Agency</h4>
                 </div>
                 <div class="col-lg-6">
-                    <img src="images/LFE-Logo.png" id="LFE-Logo" alt="Live Freely Enterprise Logo">
+                    <img src="images/LFE-Logo-Transparent" id="LFE-Logo" alt="Live Freely Enterprise Logo">
                 </div>
             </div>
 
@@ -56,10 +56,23 @@
     <!-- Service -->
     <section id="service">
         <div class="container">
+            <div class="row">
+                <div class="col-lg-12" id="question-one">
+                    <h2>Why choose Freely Enterprise?</h2>
+                    <p>
+                        By partnering with <strong>Live Freely Enterprise</strong>, you gain the advantage of collarborating with seasoned professionals
+                        in both digital marketing and data science. Our core objective centers on the development of finely-tuned customer acuisition strategies,
+                        meticulously designed to maximize the yield on your marketing investments. Through a harmonious fusion of operations, we immerse
+                        ourselves in comprehending your business catalysts and the indespensable role that digital marketing assumes in catalyzing your revnue expansion.
+
+                        Furthermore, our expertise extends to assisting medical offices across the expanse of the United States, particularly those specializing in
+                        baloon sinuplasty. Our innovative and distinct marketing methodologies elevate digital awareness and extend the outreach of these medical
+                        practices to their intended audience on a grander scale.
+                    </p>
+                </div>
+            </div>
             <div class="row question-row">
-                <div class="col-lg-6" id="question-one">
-                    <!-- <h3>Why Is Your Online Presence important?</h3>
-                    <p>The world is shifting to a digital economy, is your company poised to take advantage of it? The online marketplace has surged about 50% in the past 10 years, and a solid majority of your customers find nearly every service and item they buy on the digital marketplace.</p> -->
+                <div class="col-lg-6" id="question-two">
                     <h2>Expand Customer Base</h2>
                     <p>
                         At Live Freely Enterprise, our expertise lies in <strong>boosting customer lead campaigns</strong>.
@@ -80,23 +93,19 @@
                 <div class="col-lg-6 question-icon">
                     <i class="fa-solid fa-chart-line fa-7x"></i>
                 </div>
-                <div class="col-lg-6" id="question-two">
-                    <!-- <h3>Are you maximizing profits?</h3>
-                    <p>Companies that aren't using the internet to cultivate leads and connect with their consumers are missing out the chance to grow their business exponentially, particularly if your consumer is in the Millenial or Generation-Z age range that has grown up with digital technology. We want to help you reach that client by designing advertising that engages them and prompts them to act.</p> -->
+                <div class="col-lg-6" id="question-three">
                     <h2>Online Plaform Creation</h2>
                     <p>
                         Live Freely Enterprise specializes in <strong>website and app development services</strong>. Whether you need a new 
                         website built from scratch, want to revamp your existing site, or require a cutting-edge mobile application, we have the 
                         expertise to bring your vision to life. Our team of skilled professionals is dedicated to delivering high-quality and 
                         innovative solutions that cater to your specific needs and objectives. Trust us to create a seamless online presence and 
-                        user-friendly experiences for your audience
+                        user-friendly experiences for your audience.
                     </p>
                 </div>
             </div>
             <div class="row question-row">
-                <div class="col-lg-6" id="question-three">
-                    <!-- <h3>Why chose LFE?</h3>
-                    <p> If your company is looking to expand its online presence, we want to help you do it the right way. Our contractors are experienced and innovative in the digital realm and we work alongside to expand your business. At LFE we pride ourselves on building long term relationships with our clients and believe our reputation is so important because we pride ourselves on just working with clients but retaining them, so we aim to make customers' experience as ideal as possible. We pride ourselves on being built by excellent results and excellent customer service.</p> -->
+                <div class="col-lg-6" id="question-four">
                     <h2>Social Media Engagement</h2>
                     <p>
                         Live Freely Enterprise excels in <strong>Social Media Engagement services</strong>, aimed at bolstering your online 
@@ -108,18 +117,6 @@
                 </div>
                 <div class="col-lg-6 question-icon">
                     <i class="icon fa-solid fa-circle-check fa-7x"></i>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-12" id="question-four">
-                    <h2>Why Live Freely Enterprise?</h2>
-                    <p>
-                        When teaming up with <strong>Live Freely Enterprise</strong> you can be assured of having digital marketing and data science experts 
-                        by your side. Our primary focus revolves around crafting customer acquisition strategies with the utmost precision, 
-                        ensuring the highest possible return on investment for your marketing expenditures. Through seamless integration at an 
-                        operational level, we delve into understanding your business drivers and how digital marketing plays a pivotal role in 
-                        propelling your revenue growth
-                    </p>
                 </div>
             </div>
         </div>
@@ -135,9 +132,9 @@
 
     <footer id="footer">
         <a href="mailto:glennelie@livefreelyenterprise.com"><i class="social-icon fa-regular fa-envelope"></i></a>
-        <a href="https://www.facebook.com/profile.php?id=100085589276702"><i class="social-icon fa-brands fa-facebook-f"></i></a>
+        <!-- <a href="https://www.facebook.com/profile.php?id=100085589276702"><i class="social-icon fa-brands fa-facebook-f"></i></a>
         <a href="https://www.linkedin.com/in/glenn-elie-83741218a/"><i class="social-icon fa-brands fa-linkedin"></i></a>
-        <a href="https://www.instagram.com/livefreelyenterprise/"><i class="social-icon fa-brands fa-instagram"></i></a>
+        <a href="https://www.instagram.com/livefreelyenterprise/"><i class="social-icon fa-brands fa-instagram"></i></a> -->
         <a href="Tel: 832-459-8036"><i class="social-icon fa-solid fa-phone"></i></a>
     </footer>
 
