--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <div class="col-lg-6" id="question-three">
                     <h2>Online Plaform Creation</h2>
                     <p>
-                        Live Freely Enterprise specializes in <strong>website and development services</strong>. Whether you need a new 
+                        Live Freely Enterprise specializes in <strong>website development services</strong>. Whether you need a new 
                         website built from scratch or want to revamp your existing site we have the expertise to bring your vision to life.
                         Our team of skilled professionals is dedicated to delivering high-quality and innovative solutions that cater to your
                         specific needs and objectives. Trust us to create a seamless online presence and user-friendly experiences for your audience.
