--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         ourselves in comprehending your business catalysts and the indespensable role that digital marketing assumes in catalyzing your revnue expansion.
 
                         Furthermore, our expertise extends to assisting medical offices across the expanse of the United States, particularly those specializing in
-                        balloon sinuplasty. Our innovative and distinct marketing methodologies elevate digital awareness and extend the outreach of these medical
+                        balloon sinoplasty. Our innovative and distinct marketing methodologies elevate digital awareness and extend the outreach of these medical
                         practices to their intended audience on a grander scale.
                     </p>
                 </div>
